# PVD

./: README.md  pyproject.toml
Tema 1/T1-1/: T1-1_CargaDeDatos.ipynb  example2.csv
Tema 1/T1-2/: T1-2_Extraccion.ipynb
Tema 1/T1-3/: T1-3_MedidasBasica.ipynb  wine.tab
Tema 1/T1-4/: T1-4_RelacionesCaracteristicas.ipynb
Tema 1/T1-5/: T1-5_ComprobarAjuste.ipynb
Tema 1/T1-6/: T1-6_Anomalias.ipynb
Tema 2/T2-1/: T2-1_Normalizar.ipynb
Tema 2/T2-2/: T2-2_Discretizacion.ipynb
Tema 2/T2-3/: T2-3_TransformacionesCaracteristicas.ipynb
Tema 2/T2-4/: T2-4_EliminarValoresPerdidos.ipynb
Tema 2/T2-5/: T2-5_ImputacionIntroBasicos.ipynb
Tema 3/: Mendez_Torrero_Entrega_Practica_Tema3.ipynb
Tema 3/T3-1/: T3-1_PCA.ipynb
Tema 3/T3-2/: T3-2_ValorarCaracteristicasIndividuales.ipynb
Tema 3/T3-3/: T3-3_SeleccionarSegunValoracionesIndividuales.ipynb
Tema 3/T3-4/: T3-4_ElegirNumeroDeCaracteristicas.ipynb
Tema 3/T3-5/: T3-5_ValorarConjuntosDeCaracteristicas.ipynb
Tema 3/T3-7/: T3-7_SeleccionInstancias.ipynb
Tema 4/: Tema 4 - Plantilla-Activadad1.docx
Tema 5/: Actividad2-Tema5.md  Tema 5 - Plantilla-Activadad1.docx  Tema 5 - Plantilla-Activadad1.pages
Tema 6/: MendezTorrero_JuanJose_Actividad1Tema6.py
