[tool.poetry]
name = "master-pvd"
version = "0.1.0"
description = ""
authors = ["i42metoj@uco.es"]

[tool.poetry.dependencies]
python = ">=3.7.1 <3.10"
pandas="1.3.3"
numpy="1.21.2"
matplotlib="3.4.3"
scikit-learn="1.0.1"
ipykernel="6.7.0"
statsmodels="0.13.1"
wget="3.2"
pdftotext3="1.0.1"
seaborn="0.11.2"
imblearn="0.0"
plotly="5.6.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"